fix off center?

--- a/css/techfolio-theme/skyblue.css
+++ b/css/techfolio-theme/skyblue.css
@@ -50,7 +50,6 @@ a {
 
 
 h1 {
-    display:inline-block;
     font-size: 72px;
     background: linear-gradient(45deg,#FF0000,#FF7F00,#FFFF00,#00FF00,#0000FF,#4B0082,#8B00FF);
     -webkit-background-clip: text;
